--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 * {
   font-family: Helvetica, Arial, sans-serif;
-  background-color: rgb(234, 234, 234);
+  background-color: black;
+  color: white;
 }
 
 body {
@@ -18,6 +19,15 @@ input {
   width: 100%;
 }
 
+h1 {
+  font-size: 4rem;
+  background: #7500CF;
+  background: linear-gradient(to right, #7500CF 0%, #CF0000 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+}
+
 h2 {
   font-size: 1.5rem;
 }
@@ -25,6 +35,10 @@ h2 {
 h3 {
   font-size: 3rem;
   margin-bottom: 5px;
+}
+
+p {
+  color: black;
 }
 
 .card-grid {
