--- a/src/styles.css
+++ b/src/styles.css
@@ -75,3 +75,13 @@ p {
 .card img {
   width: 100%;
 }
+
+@media screen and (max-width: 700px) {
+  * {
+    font-size: 50%;
+  }
+
+  .card {
+  margin-right: 0;
+  }
+}
